2005-03-15  Jan Beulich  <jbeulich@novell.com>

	* i386-dis.c (INVLPG_Fixup): Decode rdtscp; change code to allow for
	easier future additions.

2005-03-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* mmix-opc.c (O, Z): Force expression as unsigned long.

2005-03-16  Alan Modra  <amodra@bigpond.net.au>

	* ppc-dis.c (powerpc_dialect): Don't set PPC_OPCODE_ALTIVEC when
	BOOKE.

2005-03-15  Alan Modra  <amodra@bigpond.net.au>

	* po/es.po: Commit new Spanish translation.

	* po/fr.po: Commit new French translation.

2005-03-09  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* vax-dis.c (entry_mask_bit): New array.
	(print_insn_vax): Decode function entry mask.

2005-03-07  Aldy Hernandez  <aldyh@redhat.com>

	* ppc-opc.c (powerpc_opcodes): Fix encoding of efscfd.

2005-03-05  Alan Modra  <amodra@bigpond.net.au>

	* po/opcodes.pot: Regenerate.

2005-03-03  Ramana Radhakrishnan  <ramana.radhakrishnan@codito.com>

	* arc-dis.c (a4_decoding_class): New enum.
	(dsmOneArcInst): Use the enum values for the decoding class.
	Remove redundant case in the switch for decodingClass value 11.

2005-03-02  Jan Beulich  <jbeulich@novell.com>

	* i386-dis.c (print_insn): Suppress lock prefix printing for cr8...15
	accesses.
	(OP_C): Consider lock prefix in non-64-bit modes.

2005-02-24  Alan Modra  <amodra@bigpond.net.au>

	* cris-dis.c (format_hex): Remove ineffective warning fix.
	* crx-dis.c (make_instruction): Warning fix.
	* frv-asm.c: Regenerate.

2005-02-23  Nick Clifton  <nickc@redhat.com>

	* cgen-dis.in: Use bfd_byte for buffers that are passed to
	read_memory.

	* ia64-opc.c (locate_opcode_ent): Initialise opval array.

	* crx-dis.c (make_instruction): Move argument structure into inner
	scope and ensure that all of its fields are initialised before
	they are used.

	* fr30-asm.c: Regenerate.
	* fr30-dis.c: Regenerate.
	* frv-asm.c: Regenerate.
	* frv-dis.c: Regenerate.
	* ip2k-asm.c: Regenerate.
	* ip2k-dis.c: Regenerate.
	* iq2000-asm.c: Regenerate.
	* iq2000-dis.c: Regenerate.